--- a/blog.html
+++ b/blog.html
@@ -1,190 +1,213 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Blog</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-      <a class="navbar-brand fw-bold" href="index.html"><h2>Selecao</h2></a>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <div class="container">
+        <a class="navbar-brand fw-bold" href="#">
+          <h2>Selecao</h2>
+        </a>
 
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <div class="collapse navbar-collapse " id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link active rounded-pill px-3 bg-warning" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item text-white"><a class="nav-link" href="About.html">About</a></li>
-          <li class="nav-item text-white"><a class="nav-link" href="About.html">Services</a></li>
-          <li class="nav-item text-white"><a class="nav-link" href="portfilio.html">Portfolio</a></li>
-          <li class="nav-item text-white"><a class="nav-link" href="team.html">Team</a></li>
-          <li class="nav-item text-white"><a class="nav-link" href="blog.html">Blog</a></li>
-           <li class="nav-item text-white"><a class="nav-link" href="contact.html">Contact</a></li>
+        <div class="collapse navbar-collapse " id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active rounded-pill px-3 bg-warning" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item text-white"><a class="nav-link" href="About.html">About</a></li>
+            <li class="nav-item text-white"><a class="nav-link" href="About.html">Services</a></li>
+            <li class="nav-item text-white"><a class="nav-link" href="portfilio.html">Portfolio</a></li>
+            <li class="nav-item text-white"><a class="nav-link" href="team.html">Team</a></li>
+            <li class="nav-item text-white"><a class="nav-link" href="blog.html">Blog</a></li>
+            <li class="nav-item text-white"><a class="nav-link" href="contact.html">Contact</a></li>
+
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+                Dropdown
+              </a>
+              <ul class="dropdown-menu dropdown-menu-white">
+                <li><a class="dropdown-item" href="#">Dropdown 1</a></li>
+                <li><a class="dropdown-item" href="#">Dropdown 2</a></li>
+                <li><a class="dropdown-item" href="#">Dropdown 3</a></li>
+                <li><a class="dropdown-item" href="#">Dropdown 4</a></li>
+              </ul>
+            </li>
 
 
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu dropdown-menu-white">
-              <li><a class="dropdown-item" href="#">Dropdown 1</a></li>
-              <li><a class="dropdown-item" href="#">Dropdown 2</a></li>
-              <li><a class="dropdown-item" href="#">Dropdown 3</a></li>
-              <li><a class="dropdown-item" href="#">Dropdown 4</a></li>
-            </ul>
-          </li>
-
-          <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-        </ul>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
 
-<div class="container-fluid border">
+
+  <div class="container-fluid border">
     <section class="bg-dark">
- <div class="card py-5 text-center bg-dark">
-  <div class="card-body">
-    <h5 class="card-title text-white fw-bold">Blog</h5>
-    <p class="text-white">Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam molestias.</p>
-    <a href="#" class="card-link" style="text-decoration: none; color: orange;">Home</a>
-    <span class="text-secondary">/</span>
-    <a href="#" class="card-link text-white" style="text-decoration: none;">Blog</a>
-  </div>
-</div>
+      <div class="card py-5 text-center bg-dark">
+        <div class="card-body">
+          <h5 class="card-title text-white fw-bold">Blog</h5>
+          <p class="text-white">Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia
+            assumenda numquam molestias.</p>
+          <a href="#" class="card-link" style="text-decoration: none; color: orange;">Home</a>
+          <span class="text-secondary">/</span>
+          <a href="#" class="card-link text-white" style="text-decoration: none;">Blog</a>
+        </div>
+      </div>
 
     </section>
     <section class="py-5">
-        <div class="row g-3 m-3">
-      <div class="card py-5 col-md mx-3 rounded-3" style="width: 18rem; border: none; box-shadow: 1px 1px 1px rgb(198, 193, 193);">
-  <img src="imges/blog-1.jpg" class="card-img-top" alt="image-blog">
-  <div class="card-body">
-    <p class="text-secondary">Politics</p>
-    <h4>Dolorum optio tempore voluptas dignissimos</h4>
-    <div class="contenu d-flex">
-        <div class="img">
-          <img src="imges/blog-author-1.jpg" class="rounded-circle" style="width: 50px;">
+      <div class="row g-3 m-3">
+        <div class="card py-5 col-md mx-3 rounded-3"
+          style="width: 18rem; border: none; box-shadow: 1px 1px 1px rgb(198, 193, 193);">
+          <img src="imges/blog-1.jpg" class="card-img-top" alt="image-blog">
+          <div class="card-body">
+            <p class="text-secondary">Politics</p>
+            <h4>Dolorum optio tempore voluptas dignissimos</h4>
+            <div class="contenu d-flex">
+              <div class="img">
+                <img src="imges/blog-author-1.jpg" class="rounded-circle" style="width: 50px;">
+              </div>
+              <div class="text ms-3">
+                <span class="fw-bold">Marie Doe</span><br>
+                <span class="text-secondary">Jan 1, 2022</span>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="text ms-3">
-            <span class="fw-bold">Marie Doe</span><br>
-            <span class="text-secondary">Jan 1, 2022</span>
-        </div>
-    </div>
-  </div>
-</div>
-  <div class="card py-5 col-md mx-3"  style="width: 18rem; border: none; box-shadow: 1px 1px 1px rgb(198, 193, 193);">
-  <img src="imges/blog-2.jpg" class="card-img-top" alt="...">
-  
-  <div class="card-body">
-    <p class="text-secondary">Sports</p>
-    <h4><a href="#" style="text-decoration: none; color: black;">Nisi magni odit consequatur autem nulla dolorem</a></h4>
-   <div class="contenu d-flex">
-        <div class="img">
-          <img src="imges/blog-author-2.jpg" class="rounded-circle" style="width: 50px;">
-        </div>
-        <div class="text ms-3">
-            <span class="fw-bold">Allisa Mayer</span><br>
-            <span class="text-secondary">Jun 5, 2022</span>
-        </div>
-    </div>
-  </div>
-</div>
- <div class="card py-5 col-md mx-3" style="width: 18rem; border: none; box-shadow: 1px 1px 1px rgb(198, 193, 193);">
-  <img src="imges/blog-3.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <p class="text-secondary">Entertainment</p>
-    <h4>Possimus soluta ut id suscipit ea ut in quo quia et soluta</h4>
-    <div class="contenu d-flex">
-        <div class="img">
-          <img src="imges/blog-author-3.jpg" class="rounded-circle" style="width: 50px;">
-        </div>
-        <div class="text ms-3">
-            <span class="fw-bold">Mark Dower</span><br>
-            <span class="text-secondary">Jun 22, 2022</span>
-        </div>
-    </div>
-  </div>
-</div>
-        </div>
-         <div class="row g-3 m-3">
-      <div class="card py-5 col-md mx-3 rounded-3" style="width: 18rem; border: none; box-shadow: 1px 1px 1px rgb(198, 193, 193);">
-  <img src="imges/blog-4.jpg" class="card-img-top" alt="image-blog">
-  <div class="card-body">
-    <p class="text-secondary">Politics</p>
-    <h4>Non rem rerum nam cum quo minus olor distincti</h4>
-    <div class="contenu d-flex">
-        <div class="img">
-          <img src="imges/blog-author-4.jpg" class="rounded-circle" style="width: 50px;">
-        </div>
-        <div class="text ms-3">
-            <span class="fw-bold">Marie Doe</span><br>
-            <span class="text-secondary">Jun 30, 2022</span>
-        </div>
-    </div>
-  </div>
-</div>
-  <div class="card py-5 col-md mx-3"  style="width: 18rem; border: none; box-shadow: 1px 1px 1px rgb(198, 193, 193);">
-  <img src="imges/blog-5.jpg" class="card-img-top" alt="...">
-  
-  <div class="card-body">
-    <p class="text-secondary">Sports</p>
-    <h4><a href="#" style="text-decoration: none; color: black;">Accusamus quaerat aliquam qui debitis facilis consequatur</a></h4>
-   <div class="contenu d-flex">
-        <div class="img">
-          <img src="imges/blog-author-5.jpg" class="rounded-circle" style="width: 50px;">
-        </div>
-        <div class="text ms-3">
-            <span class="fw-bold">Denis Peterson</span><br>
-            <span class="text-secondary">Jan 30, 2022</span>
-        </div>
-    </div>
-  </div>
-</div>
- <div class="card py-5 col-md mx-3" style="width: 18rem; border: none; box-shadow: 1px 1px 1px rgb(198, 193, 193);">
-  <img src="imges/blog-6.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <p class="text-secondary">Entertainment</p>
-    <h4>Distinctio provident quibusdam numquam aperiam aut</h4>
-    <div class="contenu d-flex">
-        <div class="img">
-          <img src="imges/blog-author-6.jpg" class="rounded-circle" style="width: 50px;">
-        </div>
-        <div class="text ms-3">
-            <span class="fw-bold">Mika Lendon</span><br>
-            <span class="text-secondary">Feb 14, 2022</span>
-        </div>
-    </div>
-  </div>
-</div>
-        </div>
-      <div class="text-center">
-    <a href="#" class="rounded-circle px-2 py-2 m-1" style="text-decoration: none; color: orange; border: 1px solid orange;">
-        <i class="bi bi-chevron-left"></i>
-    </a>
-    <a href="#" class="rounded-circle px-3 py-2 m-1" style="text-decoration: none; color: orange; border: 1px solid orange;">1</a>
-    <a href="#" class="rounded-circle px-3 py-2 m-1" style="text-decoration: none; color:white; border: 1px solid orange; background-color: orange;">2</a>
-    <a href="#" class="rounded-circle px-3 py-2 m-1" style="text-decoration: none; color: orange; border: 1px solid orange;">3</a>
-    <a href="#" class="rounded-circle px-3 py-2 m-1" style="text-decoration: none; color: orange; border: 1px solid orange;">4</a>
-    <span><i class="bi bi-three-dots text-secondary m-3"></i></span>
-    <a href="#" class="rounded-circle px-2 py-2 m-1" style="text-decoration: none; color: orange; border: 1px solid orange;">10</a>
+        <div class="card py-5 col-md mx-3"
+          style="width: 18rem; border: none; box-shadow: 1px 1px 1px rgb(198, 193, 193);">
+          <img src="imges/blog-2.jpg" class="card-img-top" alt="...">
 
-    <a href="#" class="rounded-circle px-2 py-2 m-1" style="text-decoration: none; color: orange; border: 1px solid orange;">
-        <i class="bi bi-chevron-right"></i>
-    </a>
+          <div class="card-body">
+            <p class="text-secondary">Sports</p>
+            <h4><a href="#" style="text-decoration: none; color: black;">Nisi magni odit consequatur autem nulla
+                dolorem</a></h4>
+            <div class="contenu d-flex">
+              <div class="img">
+                <img src="imges/blog-author-2.jpg" class="rounded-circle" style="width: 50px;">
+              </div>
+              <div class="text ms-3">
+                <span class="fw-bold">Allisa Mayer</span><br>
+                <span class="text-secondary">Jun 5, 2022</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card py-5 col-md mx-3"
+          style="width: 18rem; border: none; box-shadow: 1px 1px 1px rgb(198, 193, 193);">
+          <img src="imges/blog-3.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="text-secondary">Entertainment</p>
+            <h4>Possimus soluta ut id suscipit ea ut in quo quia et soluta</h4>
+            <div class="contenu d-flex">
+              <div class="img">
+                <img src="imges/blog-author-3.jpg" class="rounded-circle" style="width: 50px;">
+              </div>
+              <div class="text ms-3">
+                <span class="fw-bold">Mark Dower</span><br>
+                <span class="text-secondary">Jun 22, 2022</span>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-   
+      <div class="row g-3 m-3">
+        <div class="card py-5 col-md mx-3 rounded-3"
+          style="width: 18rem; border: none; box-shadow: 1px 1px 1px rgb(198, 193, 193);">
+          <img src="imges/blog-4.jpg" class="card-img-top" alt="image-blog">
+          <div class="card-body">
+            <p class="text-secondary">Politics</p>
+            <h4>Non rem rerum nam cum quo minus olor distincti</h4>
+            <div class="contenu d-flex">
+              <div class="img">
+                <img src="imges/blog-author-4.jpg" class="rounded-circle" style="width: 50px;">
+              </div>
+              <div class="text ms-3">
+                <span class="fw-bold">Marie Doe</span><br>
+                <span class="text-secondary">Jun 30, 2022</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card py-5 col-md mx-3"
+          style="width: 18rem; border: none; box-shadow: 1px 1px 1px rgb(198, 193, 193);">
+          <img src="imges/blog-5.jpg" class="card-img-top" alt="...">
+
+          <div class="card-body">
+            <p class="text-secondary">Sports</p>
+            <h4><a href="#" style="text-decoration: none; color: black;">Accusamus quaerat aliquam qui debitis facilis
+                consequatur</a></h4>
+            <div class="contenu d-flex">
+              <div class="img">
+                <img src="imges/blog-author-5.jpg" class="rounded-circle" style="width: 50px;">
+              </div>
+              <div class="text ms-3">
+                <span class="fw-bold">Denis Peterson</span><br>
+                <span class="text-secondary">Jan 30, 2022</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card py-5 col-md mx-3"
+          style="width: 18rem; border: none; box-shadow: 1px 1px 1px rgb(198, 193, 193);">
+          <img src="imges/blog-6.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="text-secondary">Entertainment</p>
+            <h4>Distinctio provident quibusdam numquam aperiam aut</h4>
+            <div class="contenu d-flex">
+              <div class="img">
+                <img src="imges/blog-author-6.jpg" class="rounded-circle" style="width: 50px;">
+              </div>
+              <div class="text ms-3">
+                <span class="fw-bold">Mika Lendon</span><br>
+                <span class="text-secondary">Feb 14, 2022</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="text-center">
+        <a href="#" class="rounded-circle px-2 py-2 m-1"
+          style="text-decoration: none; color: orange; border: 1px solid orange;">
+          <i class="bi bi-chevron-left"></i>
+        </a>
+        <a href="#" class="rounded-circle px-3 py-2 m-1"
+          style="text-decoration: none; color: orange; border: 1px solid orange;">1</a>
+        <a href="#" class="rounded-circle px-3 py-2 m-1"
+          style="text-decoration: none; color:white; border: 1px solid orange; background-color: orange;">2</a>
+        <a href="#" class="rounded-circle px-3 py-2 m-1"
+          style="text-decoration: none; color: orange; border: 1px solid orange;">3</a>
+        <a href="#" class="rounded-circle px-3 py-2 m-1"
+          style="text-decoration: none; color: orange; border: 1px solid orange;">4</a>
+        <span><i class="bi bi-three-dots text-secondary m-3"></i></span>
+        <a href="#" class="rounded-circle px-2 py-2 m-1"
+          style="text-decoration: none; color: orange; border: 1px solid orange;">10</a>
+
+        <a href="#" class="rounded-circle px-2 py-2 m-1"
+          style="text-decoration: none; color: orange; border: 1px solid orange;">
+          <i class="bi bi-chevron-right"></i>
+        </a>
+      </div>
+
     </section>
-   
-</div>
-  
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+    crossorigin="anonymous"></script>
 
 </body>
+
 </html>
