--- a/contact.html
+++ b/contact.html
@@ -3,113 +3,128 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Selecao </title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <title>Selecao</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
-   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-      <a class="navbar-brand fw-bold" href="index.html"><h2>Selecao</h2></a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <div class="container">
+        <a class="navbar-brand fw-bold" href="#">
+          <h2>Selecao</h2>
+        </a>
 
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <div class="collapse navbar-collapse " id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link active rounded-pill px-3 bg-warning" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item text-white"><a class="nav-link" href="About.html">About</a></li>
-          <li class="nav-item text-white"><a class="nav-link" href="About.html">Services</a></li>
-          <li class="nav-item text-white"><a class="nav-link" href="portfilio.html">Portfolio</a></li>
-          <li class="nav-item text-white"><a class="nav-link" href="team.html">Team</a></li>
-          <li class="nav-item text-white"><a class="nav-link" href="blog.html">Blog</a></li>
-           <li class="nav-item text-white"><a class="nav-link" href="contact.html">Contact</a></li>
+        <div class="collapse navbar-collapse " id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active rounded-pill px-3 bg-warning" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item text-white"><a class="nav-link" href="About.html">About</a></li>
+            <li class="nav-item text-white"><a class="nav-link" href="About.html">Services</a></li>
+            <li class="nav-item text-white"><a class="nav-link" href="portfilio.html">Portfolio</a></li>
+            <li class="nav-item text-white"><a class="nav-link" href="team.html">Team</a></li>
+            <li class="nav-item text-white"><a class="nav-link" href="blog.html">Blog</a></li>
+            <li class="nav-item text-white"><a class="nav-link" href="contact.html">Contact</a></li>
 
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu dropdown-menu-white">
-              <li><a class="dropdown-item" href="#">Dropdown 1</a></li>
-              <li><a class="dropdown-item" href="#">Dropdown 2</a></li>
-              <li><a class="dropdown-item" href="#">Dropdown 3</a></li>
-              <li><a class="dropdown-item" href="#">Dropdown 4</a></li>
-            </ul>
-          </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+                Dropdown
+              </a>
+              <ul class="dropdown-menu dropdown-menu-white">
+                <li><a class="dropdown-item" href="#">Dropdown 1</a></li>
+                <li><a class="dropdown-item" href="#">Dropdown 2</a></li>
+                <li><a class="dropdown-item" href="#">Dropdown 3</a></li>
+                <li><a class="dropdown-item" href="#">Dropdown 4</a></li>
+              </ul>
+            </li>
 
-          <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-        </ul>
+
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+<section class="contact-page">
+  <!-- Contact Section -->
+  <section class="container py-5">
+    <h6 class="text-uppercase fw-light">Contact</h6>
+    <h1 class="fw-bold mb-4">Contact Us</h1>
+
+    <div class="d-flex align-items-start mb-4">
+      <div class="me-3 d-flex align-items-center justify-content-center bg-light rounded-circle" style="width:50px;height:50px">
+        <i class="bi bi-geo-alt-fill text-warning fs-3"></i>
+      </div>
+      <div>
+        <h6 class="fw-bold">Address</h6>
+        <p>A108 Adam Street, New York, NY 535022</p>
       </div>
     </div>
-  </nav>
 
-<section class="container py-5">
-  <h6 class="text-uppercase  fw-light">Contact</h6>
-  <h1 class="fw-bold mb-4">Contact Us</h1>
-  <div class="d-flex align-items-start mb-4">
-    <div class="me-3 d-flex align-items-center justify-content-center bg-light rounded-circle"style="width:50px;height:50px">
-      <i class="bi bi-geo-alt-fill text-warning fs-3"></i>
+    <div class="d-flex align-items-start mb-4">
+      <div class="me-3 d-flex align-items-center justify-content-center bg-light rounded-circle" style="width:50px;height:50px">
+        <i class="bi bi-telephone-fill text-warning fs-3"></i>
+      </div>
+      <div>
+        <h6 class="fw-bold">Call Us</h6>
+        <p class="text-warning">+1 5589 55488 55</p>
+      </div>
     </div>
-    <div>
-      <h6 class="fw-bold">Address</h6>
-      <p>A108 Adam Street, New York, NY 535022</p>
+
+    <div class="d-flex align-items-start mb-4">
+      <div class="me-3 d-flex align-items-center justify-content-center bg-light rounded-circle" style="width:50px;height:50px">
+        <i class="bi bi-envelope-fill text-warning fs-3"></i>
+      </div>
+      <div>
+        <h6 class="fw-bold">Email Us</h6>
+        <p>info@example.com</p>
+      </div>
     </div>
-  </div>
-  <div class="d-flex align-items-start mb-4">
-    <div class="me-3 d-flex align-items-center justify-content-center bg-light rounded-circle"style="width:50px;height:50px">
-      <i class="bi bi-telephone-fill text-warning fs-3"></i>
-    </div>
-    <div>
-      <h6 class="fw-bold">Call Us</h6>
-      <p  class="text-warning">+1 5589 55488 55</p>
-    </div>
-  </div>
-  <div class="d-flex align-items-start mb-4">
-    <div class="me-3 d-flex align-items-center justify-content-center bg-light rounded-circle"style="width:50px;height:50px">
-      <i class="bi bi-envelope-fill text-warning fs-3"></i>
-    </div>
-    <div>
-      <h6 class="fw-bold">Email Us</h6>
-      <p>info@example.com</p>
-    </div>
-  </div>
-  <form>
+
+    <form>
+      <div class="mb-3">
+        <input type="text" class="form-control" placeholder="Your Name" required>
+      </div>
+      <div class="mb-3">
+        <input type="email" class="form-control" placeholder="Your Email" required>
+      </div>
+      <div class="mb-3">
+        <input type="text" class="form-control" placeholder="Subject" required>
+      </div>
+      <div class="mb-3">
+        <textarea class="form-control" rows="4" placeholder="Message" required></textarea>
+      </div>
+      <section class="text-warning text-center">
+        <button type="submit" class="btn btn-warning px-4 rounded-pill">Send Message</button>
+      </section>
+    </form>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-dark text-white text-center py-5">
+    <h2 class="fw-bold">Selecao</h2>
+    <p class="mb-4">Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
     <div class="mb-3">
-      <input type="text" class="form-control" placeholder="Your Name" required>
+      <a href="#" class="btn btn-warning btn-sm rounded-circle me-2"><i class="bi bi-twitter"></i></a>
+      <a href="#" class="btn btn-warning btn-sm rounded-circle me-2"><i class="bi bi-facebook"></i></a>
+      <a href="#" class="btn btn-warning btn-sm rounded-circle me-2"><i class="bi bi-instagram"></i></a>
+      <a href="#" class="btn btn-warning btn-sm rounded-circle me-2"><i class="bi bi-skype"></i></a>
+      <a href="#" class="btn btn-warning btn-sm rounded-circle me-2"><i class="bi bi-linkedin"></i></a>
     </div>
-    <div class="mb-3">
-      <input type="email" class="form-control" placeholder="Your Email" required>
-    </div>
-    <div class="mb-3">
-      <input type="text" class="form-control" placeholder="Subject" required>
-    </div>
-    <div class="mb-3">
-      <textarea class="form-control" rows="4" placeholder="Message" required></textarea>
-    </div>
-    <section class="text-warning text-center">
-    <button type="submit" class="btn btn-warning px-4 rounded-pill ">Send Message</button>
-    </section>
-  </form>
+    <p class="mb-1">Copyright <strong>Selecao</strong> All Rights Reserved</p>
+    <p>Designed by <a href="#" class="text-warning text-decoration-none">BootstrapMade</a></p>
+  </footer>
+
+  <!-- Scroll to Top Button -->
+  <button onclick="window.scrollTo({top: 0, behavior: 'smooth'});" class="btn btn-warning rounded-circle position-fixed bottom-0 end-0 m-4">
+    <i class="bi bi-arrow-up"></i>
+  </button>
+
 </section>
-<footer class="bg-dark text-white text-center py-5">
-  <h2 class="fw-bold">Selecao</h2>
-  <p class="mb-4">Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
-  <div class="mb-3">
-    <a href="#" class="btn btn-warning btn-sm rounded-circle me-2"><i class="bi bi-twitter"></i></a>
-    <a href="#" class="btn btn-warning btn-sm rounded-circle me-2"><i class="bi bi-facebook"></i></a>
-    <a href="#" class="btn btn-warning btn-sm rounded-circle me-2"><i class="bi bi-instagram"></i></a>
-    <a href="#" class="btn btn-warning btn-sm rounded-circle me-2"><i class="bi bi-skype"></i></a>
-    <a href="#" class="btn btn-warning btn-sm rounded-circle me-2"><i class="bi bi-linkedin"></i></a>
-  </div>
-  <p class="mb-1">Copyright <strong>Selecao</strong> All Rights Reserved</p>
-  <p>Designed by <a href="#" class="text-warning text-decoration-none">BootstrapMade</a></p>
-</footer>
-<button onclick="window.scrollTo({top: 0, behavior: 'smooth'});" class="btn btn-warning rounded-circle position-fixed bottom-0 end-0 m-4">
-  <i class="bi bi-arrow-up"></i>
-</button>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
